--- a/app/templates/frames/entries_table.html.j2
+++ b/app/templates/frames/entries_table.html.j2
@@ -20,8 +20,8 @@
                     </button>
 
                     {# Accordion button for logging annual leave #}
-                    <button id="showLeaveForm"
-                            class="accordion-button collapsed"
+                    <button id="showAnnualLeaveForm"
+                            class="accordion-button collapsed border-end"
                             type="button"
                             data-bs-toggle="collapse"
                             data-bs-target="#accordion-annual-leave-body"
@@ -29,6 +29,19 @@
                         <div class="d-flex justify-content-center flex-grow-1 align-items-center">
                             Add Annual Leave
                             <i class="bi bi-brightness-alt-high ms-2 fs-4"></i>
+                        </div>
+                    </button>
+
+                    {# Accordion button for logging sick leave #}
+                    <button id="showSickLeaveForm"
+                            class="accordion-button collapsed"
+                            type="button"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#accordion-sick-leave-body"
+                            aria-controls="accordion-sick-leave-body">
+                        <div class="d-flex justify-content-center flex-grow-1 align-items-center">
+                            Add Sick Leave
+                            <i class="bi bi-bandaid ms-2 fs-6"></i>
                         </div>
                     </button>
                 </div>
@@ -51,7 +64,9 @@
                  aria-labelledby="accordion-annual-leave-header"
                  data-bs-parent="#accordion-forms">
                 <div class="container mt-2 mb-2">
-                    <dynamic-frame :url="/frames/leave_form/" :execute-scripts="true">
+                    <dynamic-frame :url="/frames/leave_form/"
+                                   :param-type="annual"
+                                   :execute-scripts="true">
                     </dynamic-frame>
                 </div>
             </div>
@@ -59,10 +74,10 @@
             {# Accordion body for logging sick leave #}
             <div id="accordion-sick-leave-body"
                  class="accordion-collapse collapse border-bottom"
-                 aria-labelledby="accordion-annual-leave-header"
+                 aria-labelledby="accordion-sick-leave-header"
                  data-bs-parent="#accordion-forms">
                 <div class="container mt-2 mb-2">
-                    <dynamic-frame :url="/frames/sick_leave_form/" :execute-scripts="true">
+                    <dynamic-frame :url="/frames/leave_form/" :param-type="sick" :execute-scripts="true">
                     </dynamic-frame>
                 </div>
             </div>
@@ -133,7 +148,9 @@
                          data-parent="#accordion-{{ rec.id }}">
                         <div class="container mt-2 mb-2">
                             {# TODO: Make this frame lazily loaded #}
-                            <dynamic-frame :url="/frames/leave_form/{{ rec.id }}" :execute-scripts="true">
+                            <dynamic-frame :url="/frames/leave_form/{{ rec.id }}"
+                                           :param-type="{{ rec.leave_type }}"
+                                           :execute-scripts="true">
                             </dynamic-frame>
                         </div>
                     </div>
@@ -158,7 +175,7 @@
         border-bottom-right-radius: 0px !important;
     }
 
-    #showLeaveForm {
+    #showAnnualLeaveForm {
         border-top-left-radius: 0px !important;
         border-bottom-left-radius: 0px !important;
     }
