Fix settings page on mobile
Nav buttons are squashed
This change puts the buttons at the top instead of the side on mobile

--- a/app/templates/pages/settings.html.j2
+++ b/app/templates/pages/settings.html.j2
@@ -1,8 +1,8 @@
 {% extends "layouts/wrapper.html.j2" %}
 {% block content %}
     <div class="row">
-        <div class="col-2 mt-1 pe-5">
-            <nav class="nav nav-pills flex-column">
+        <div class="col-lg-2 mt-1 pe-5 pb-3">
+            <nav class="nav nav-pills flex-lg-column">
                 <a class="nav-link{% if page == 'general' %} active{% endif %}"
                    aria-current="page"
                    href="/settings/general">General</a>
