--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -53,8 +53,10 @@
                     <h4 class="mt-4">Breaks</h4>
                     <button type="button" class="add-break btn btn-link p-0 mb-2">Add Break</button>
                     {% for break in time.breaks %}
-{% set break_start = arrow.get(break.start).to(settings.timezone) %}
-{% set break_end = arrow.get(break.end).to(settings.timezone) if break.end else "" %}
+                        {# djlint:off #}
+                        {% set break_start = arrow.get(break.start).to(settings.timezone) %}
+                        {% set break_end = arrow.get(break.end).to(settings.timezone) if break.end else "" %}
+                        {# djlint:on #}
                         <div class="row mb-2">
                             <div class="col-3">
                                 <div class="input-group">
@@ -149,16 +151,18 @@
              */
             frame.querySelectorAll(".add-break").forEach(btn => btn.addEventListener("click", e => {
                 const breakList = btn.closest(".break-list");
+                /* beautify preserve:start */
                 breakList.insertAdjacentHTML("beforeend", `
-                            <div class="row mb-2">
-                                <div class="col-3">
-                                    <input class="flatpickr" type="text" name="new-break-start" data-date-type="datetime"/>
-                                </div>
-                                <div class="col-3">
-                                    <input class="flatpickr col-3" type="text" name="new-break-end" data-date-type="datetime"/>
-                                </div>
-                            </div>
-                        `);
+                    <div class="row mb-2">
+                        <div class="col-3">
+                            <input class="flatpickr" type="text" name="new-break-start" data-date-type="datetime"/>
+                        </div>
+                        <div class="col-3">
+                            <input class="flatpickr col-3" type="text" name="new-break-end" data-date-type="datetime"/>
+                        </div>
+                    </div>
+                `);
+                /* beautify preserve:start */
 
                 const newBreakRow = [...breakList.querySelectorAll(".row")].pop()
                 newBreakRow.querySelectorAll(".flatpickr").forEach(picker => window.initDatePicker(picker));
