--- a/app/templates/frames/leave_form.html.j2
+++ b/app/templates/frames/leave_form.html.j2
@@ -16,6 +16,7 @@
                            required/>
                 </div>
             </div>
+
             <div class="col-md-3">
                 <label class="form-label">Is this a half day?</label>
                 <div class="input-group">
@@ -23,12 +24,14 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
-                <label class="form-label">Is this a public holiday?</label>
-                <div class="input-group">
-                    <input class="form-check-input mt-2" type="checkbox" name="public-holiday" {{ "checked" if row.public_holiday else "" }} />
+            {% if leave_type == "annual" %}
+                <div class="col-md-3">
+                    <label class="form-label">Is this a public holiday?</label>
+                    <div class="input-group">
+                        <input class="form-check-input mt-2" type="checkbox" name="public-holiday" {{ "checked" if row.public_holiday else "" }} />
+                    </div>
                 </div>
-            </div>
+            {% endif %}
 
             <div class="mt-3">
                 <label class="form-label">Note</label>
