Update label in header

--- a/app/templates/frames/time_stats.html.j2
+++ b/app/templates/frames/time_stats.html.j2
@@ -19,7 +19,7 @@
     <div class="col-md-4 mb-2">
         <div class="card border-dark">
             <div class="card-body">
-                <h4 class="card-title">Time Left</h4>
+                <h4 class="card-title">Scheduled Time Left</h4>
                 <div class="d-flex justify-content-between">
                     <div>
                         <h6 class="card-subtitle mb-1 mt-1 text-muted">Today</h6>
