--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -35,7 +35,7 @@
             <div id="header"
                  class="d-flex flex-row justify-content-between align-items-center mb-3">
                 <h1>
-                    <a href="/">LogMyTime</a>
+                    <a href="{{ '/dash' if is_logged_in else '/'}}">LogMyTime</a>
                 </h1>
                 <div>
                     <a title="GitHub"
