--- a/app/templates/pages/about.html.j2
+++ b/app/templates/pages/about.html.j2
@@ -1,24 +1,26 @@
 {% extends "layouts/wrapper.html.j2" %}
 {% block content %}
     <div class="mt-5">
-        <h3>About</h3>
-        <p>
-            LogMyTime is a basic, free, <a href="https://github.com/danstewart/log-my-time">open source</a> web app for keeping track of your working hours and overtime.<br />
-        </p>
+        <div class="mb-5">
+            <h3>About</h3>
+            <p>
+                LogMyTime is a simple and <a href="https://github.com/danstewart/log-my-time">open source</a> web app for keeping track of your working hours and overtime.<br />
+            </p>
+        </div>
 
-        <hr />
+        <div class="mb-5">
+            <h3>Features</h3>
+            <ul>
+                <li>Track time worked</li>
+                <li>Track overtime across multiple weeks</li>
+                <li>Track annual leave and sick days</li>
+            </ul>
+        </div>
 
-        <h3>Features</h3>
-        <ul>
-            <li>Track time worked</li>
-            <li>Track overtime across multiple weeks</li>
-            <li>Track annual leave and sick days</li>
-        </ul>
-
-        <hr />
-
-        <h3>Demo</h3>
-        <img src="https://user-images.githubusercontent.com/10670565/168468584-cb9182ad-d82e-4fe5-aa96-c937a826611c.gif" />
+        <div class="mb-5">
+            <h3>Demo</h3>
+            <img src="https://user-images.githubusercontent.com/10670565/168468584-cb9182ad-d82e-4fe5-aa96-c937a826611c.gif" />
+        </div>
     </div>
 
     <style>
