--- a/app/templates/pages/login.html.j2
+++ b/app/templates/pages/login.html.j2
@@ -24,14 +24,15 @@
                     </button>
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
-                    <div class="d-flex justify-content-end">
+                    {% if mode == "/login" %}
                         <button type="submit" name="action" value="login" class="btn btn-primary text-nowrap">Log in</button>
-                        <button type="submit" name="action" value="register" class="btn btn-link">Register</button>
-                    </div>
-                    <button type="submit"
-                            class="btn btn-link pe-0"
-                            name="action"
-                            value="forgot-password">Forgot password</button>
+                        <button type="submit"
+                                class="btn btn-link pe-0"
+                                name="action"
+                                value="forgot-password">Forgot password</button>
+                    {% else %}
+                        <button type="submit" name="action" value="register" class="btn btn-primary">Register</button>
+                    {% endif %}
                 </div>
             </form>
         </div>
