--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -32,38 +32,67 @@
 
         <div class="container mt-3">
             {# Header #}
-            <div id="header"
-                 class="d-flex flex-row justify-content-between align-items-center mb-3">
+            <nav id="header" class="navbar navbar-expand-lg d-flex flex-row justify-content-between align-item-center mb-3">
                 <h2>
                     <a href="{{ '/dash' if is_logged_in else '/'}}">LogMyTime</a>
                 </h2>
-                <div>
-                    <a title="What's New"
-                       href="/whats_new"
-                       class="icon me-4 position-relative">
-                        <i class="bi bi-rocket-takeoff-fill"></i>
 
-                        {% if unseen_whats_new %}
-                            <span class="position-absolute top-0 start-100 translate-middle p-1 bg-danger rounded-circle">
-                                <span class="visually-hidden">New Features</span>
-                            </span>
-                        {% endif %}
-                    </a>
+                {% if is_logged_in %}
+                    <ul class="navbar-nav d-flex" id="menu">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link icon d-flex justify-content-end" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-list position-relative align-self-end">
+                                    {% if unseen_whats_new %}
+                                        <span class="notification-badge bg-danger">
+                                            <span class="visually-hidden">New Features</span>
+                                        </span>
+                                    {% endif %}
+                                </i>
 
-                    <a title="GitHub"
-                       href="https://github.com/danstewart/log-my-time"
-                       class="icon me-4">
-                        <i class="bi bi-github"></i>
-                    </a>
+                            </a>
 
-                    {% if is_logged_in %}
-                        <a title="Settings" href="/settings" class="icon">
-                            <i class="bi me-4 bi-gear-wide-connected"></i>
-                        </a>
-                        <a title="Log out" class="icon me-4" href="/logout"><i class="bi bi-box-arrow-in-left"></i></a>
-                    {% endif %}
-                </div>
-            </div>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a title="What's New"
+                                    href="/whats_new"
+                                    class="icon dropdown-item">
+                                        <i class="me-3 position-relative bi bi-rocket-takeoff-fill">
+                                            {% if unseen_whats_new %}
+                                                <span class="notification-badge bg-danger">
+                                                    <span class="visually-hidden">New Features</span>
+                                                </span>
+                                            {% endif %}
+                                        </i>
+                                        What's New
+                                    </a>
+                                </li>
+
+
+                                <li>
+                                    <a title="Settings" href="/settings" class="dropdown-item icon">
+                                        <i class="bi me-3 bi-gear-wide-connected"></i>Settings
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a title="GitHub"
+                                    href="https://github.com/danstewart/log-my-time"
+                                    class="icon dropdown-item">
+                                        <i class="bi me-3 bi-github"></i> Source
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a title="Log out" class="icon me-4 dropdown-item" href="/logout">
+                                        <i class="bi me-3 bi-box-arrow-in-left"></i>Logout
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                {% endif %}
+            </nav>
+
             {# Flash messages #}
             <div aria-live="polite" aria-atomic="true">
                 <div id="flash-messages" class="mt-3">
