Fix spacing in menu item

--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -62,8 +62,7 @@
                                                     <span class="visually-hidden">New Features</span>
                                                 </span>
                                             {% endif %}
-                                        </i>
-                                        What's New
+                                        </i>What's New
                                     </a>
                                 </li>
 
