--- a/app/templates/pages/dash.html.j2
+++ b/app/templates/pages/dash.html.j2
@@ -11,6 +11,10 @@
                    :url="/frames/clock_in_form">
     </dynamic-frame>
 
+    {% if next_public_holiday %}
+        <h4>Next Public Holiday: {{ next_public_holiday["name"] }}: {{ next_public_holiday["date"] }}</h4>
+    {% endif %}
+
     <!-- Time Log Table -->
     <dynamic-frame id="log-table"
                    :execute-scripts="true"
