--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -34,7 +34,7 @@
             {# Header #}
             <nav id="header" class="navbar navbar-expand-lg d-flex flex-row justify-content-between align-item-center mb-3">
                 <h2>
-                    <a href="{{ '/dash' if is_logged_in else '/'}}">LogMyTime</a>
+                    <a href="{{ '/dash' if is_logged_in else '/' }}">LogMyTime</a>
                 </h2>
 
                 {% if is_logged_in %}
@@ -66,6 +66,11 @@
                                     </a>
                                 </li>
 
+                                <li>
+                                    <a title="Holidays" href="/holidays" class="dropdown-item icon">
+                                        <i class="me-3 bi bi-sunglasses"></i>Holidays
+                                    </a>
+                                </li>
 
                                 <li>
                                     <a title="Settings" href="/settings" class="dropdown-item icon">
