Upgrad binder.js

--- a/app/templates/frames/clock_in_form.html.j2
+++ b/app/templates/frames/clock_in_form.html.j2
@@ -38,7 +38,7 @@
 </form>
 <script>
     (function() {
-        const frame = document.currentScript.parentNode;
+        const frame = document.currentScript.closest("dynamic-frame");
         window.addEventListener("time:changed", e => frame.refresh());
     })();
 </script>
