--- a/app/templates/frames/entries_table.html.j2
+++ b/app/templates/frames/entries_table.html.j2
@@ -161,7 +161,7 @@
 
 <script>
     (function() {
-        const frame = document.currentScript.parentNode;
+        const frame = document.currentScript.closest("dynamic-frame");
 
         // If any time data changes then update ourselves
         window.addEventListener("time:changed", e => frame.refresh());
