--- a/app/templates/pages/holidays/history.html.j2
+++ b/app/templates/pages/holidays/history.html.j2
@@ -1,9 +1,9 @@
 {% extends "layouts/holidays.html.j2" %}
 
 {% block content %}
-    <h4>Upcoming Holidays</h4>
+    <h4>Previous Holidays</h4>
     <ul>
-        {% for dt, name in upcoming_holidays.items() %}
+        {% for dt, name in previous_holidays.items() %}
             <li>{{ name }} <small>({{ dt }})</small></li>
         {% endfor %}
     </ul>
