--- a/app/templates/pages/settings.html.j2
+++ b/app/templates/pages/settings.html.j2
@@ -9,7 +9,7 @@ The settings pages extend this and specify their content in a `content` block
 {% block content %}
     <div class="row">
         <div class="col-lg-2 mt-1 pe-5 pb-3">
-            <dynamic-frame-router :target="#main-content">
+            <dynamic-frame-router :target="#main-content" :caching>
                 {# Clicking these will only update the target node via DynamicFrame #}
                 {# Active element is worked out from the current URL #}
                 <nav class="nav nav-pills flex-lg-column">
