Fix break spacing

--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -84,8 +84,12 @@
 
     <style>
         .break-wrapper {
-            width: 12rem;
+            width: auto;
             display: flex;
+        }
+
+        .break-wrapper > input {
+            margin-right: -20px;
         }
     </style>
 
